--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@sequelize/mssql": "^7.0.0-alpha.41",
+    "async": "^3.2.5",
     "benchmark": "^2.1.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "faker": "^5.5.3",
     "moment": "^2.30.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
